# UAV-communication-relay

./: .gitignore  README.md
UAV_Mission_Control_Program/: CMakeLists.txt  README.md  README.md~  package.xml
UAV_Mission_Control_Program/boot/: boot.sh  mom_node_autostart.sh  uavboot
UAV_Mission_Control_Program/launch/: uav_launch.launch
UAV_Mission_Control_Program/src/: cmd.cpp  datalink_ch1.cpp  heartbeat.cpp  listener.cpp  sysid.h
UAV_Mission_Control_Program/uav/devel/: .catkin  .rosinstall  setup.sh
UAV_Mission_Control_Program/uav/devel/include/uav_control/: DFrame.h  datalink_send.h  datalink_sendRequest.h
UAV_Mission_Control_Program/uav/devel/lib/pkgconfig/: uav_control.pc
UAV_Mission_Control_Program/uav/devel/lib/uav_control/: cmd  datalink_ch1  datalink_ch2  datalink_route  listener  uav_stat_monitor  verify_port_assignment
UAV_Mission_Control_Program/uav/devel/share/uav_control/cmake/: uav_control-msg-extras.cmake  (+2 more)
UAV_Mission_Control_Program/uav/src/uav_control/: CMakeLists.txt  uav_launch.launch~
UAV_Mission_Control_Program/uav/src/uav_control/boot/: uavboot_rpi
UAV_Mission_Control_Program/uav/src/uav_control/msg/: DFrame.msg  channel_stat.msg
UAV_Mission_Control_Program/uav/src/uav_control/src/: data_format.h  datalink_ch1.cpp  datalink_ch1.cpp~  datalink_ch2.cpp  datalink_ch2.cpp~  datalink_route.cpp  heartbeat.cpp  uav_stat_monitor.cpp~  verify_port_assignment.cpp  verify_port_assignment.cpp~
UAV_Mission_Control_Program/uav/src/uav_control/src/boot/: .mavros_log.txt  boot.sh  mavros_autostart.sh~
UAV_Mission_Control_Program/uav/src/uav_control/srv/: datalink_send.srv~  send_datalink_ch1.srv~
UAV_Mission_Control_Program_datalink_testing/: README.md
UAV_Mission_Control_Program_datalink_testing/uav/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
UAV_Mission_Control_Program_datalink_testing/uav/devel/include/uav_control/: channel_stat.h  datalink_sendResponse.h
UAV_Mission_Control_Program_datalink_testing/uav/devel/lib/pkgconfig/: uav_control.pc
UAV_Mission_Control_Program_datalink_testing/uav/devel/lib/uav_control/: cmd  datalink_ch1  datalink_ch2  datalink_listener  datalink_route  datalink_test  listener  uav_stat_monitor
UAV_Mission_Control_Program_datalink_testing/uav/src/uav_control/: CMakeLists.txt~
UAV_Mission_Control_Program_datalink_testing/uav/src/uav_control/boot/: mavros_autostart.sh  roscore_autostart.sh  son_node_autostart.sh  uav_stat_monitor_autostart.sh
UAV_Mission_Control_Program_datalink_testing/uav/src/uav_control/src/: datalink_ch1.cpp  datalink_ch2.cpp~  datalink_listener.cpp  datalink_route.cpp  datalink_test.cpp  img_trans.cpp  msg_id.txt  sysid.h  uav_stat_monitor.cpp
(+24 files in other folders)
